--- a/pages/idSubmit/idSubmit.html
+++ b/pages/idSubmit/idSubmit.html
@@ -156,11 +156,11 @@
         <label for="dob">Date of Birth</label>
 
         <input
-          placeholder="YYYY-MM-DD"
+          value="YYYY-MM-DD"
           class="textbox-n"
-          type="text"
-          onfocus="(this.type='date')"
-          onchange="(this.type='text')"
+          type="button"
+          onclick="(this.type='date')"
+          onchange="(this.type='button')"
           id="dob"
         />
 
