--- a/pages/arrivalTime/arrivalTime.html
+++ b/pages/arrivalTime/arrivalTime.html
@@ -72,6 +72,7 @@
           placeholder="--:-- pm"
           id="arrivalTime"
           autocomplete="off"
+          onkeydown="return false"
           required
         />
 
