--- a/pages/arrivalTime/arrivalTime.html
+++ b/pages/arrivalTime/arrivalTime.html
@@ -66,8 +66,8 @@
         <label for="arrivalTime">Arrival Time <span>*</span></label>
         <!--<input type="time" id="arrivalTime" min="14:00" max="23:59" required />-->
         <input
-          data-clocklet="format: h:mm a"
-          value="--:-- pm"
+          data-clocklet="format: hh:mm A"
+          value="02:00 PM"
           id="arrivalTime"
           type="button"
           required
