--- a/pages/search-res/search-res.html
+++ b/pages/search-res/search-res.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <!--Search Res-->
+    <!--Search Reservation-->
     <section class="search-container">
       <h2>Search Reservation</h2>
       <div class="search-input">
@@ -78,6 +78,7 @@
 
           <pre id="popup">&nbsp;</pre>
 
+          <!--Reservation Validation-->
           <a class="btn" id="search-btn" onclick="getResData()">
             <p>Search</p>
           </a>
