--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,11 @@
         </div>
       </nav>
 
-      <i class="sm-view fa-solid fa-circle-user account_settings"></i>
+      <i class="sm-view fa-solid fa-circle-user account_settings">&nbsp;</i>
+      <div class="language sm-view">
+        <img src="assets/images/18.jpg" alt="" />
+        <i class="fa-solid fa-angle-down"></i>
+      </div>
     </header>
 
     <app-root></app-root>
