--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,9 @@
         </div>
       </nav>
 
-      <i class="sm-view fa-solid fa-circle-user account_settings">&nbsp;</i>
+      <a class="sm-view account_settings">
+        <i class="fa-solid fa-circle-user">&nbsp;</i>
+      </a>
       <div class="language sm-view">
         <img src="assets/images/18.jpg" alt="" />
         <i class="fa-solid fa-angle-down"></i>
