--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <div class="menuList">
           <a href="#">Notifications</a>
           <a href="#">Reservations</a>
-          <a href="#">Confirmations</a>
+          <a href="confirmations">Confirmations</a>
           <a href="#">Wishlist</a>
           <br />
           <a href="#" class="smLink">Account</a>
